# crypto-pandas

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  temp.py
binder/: requirements.txt
crypto_pandas/: __init__.py  base_processor.py  hmac_authentication.py  markets.py  order_schema.py  preprocessing.py  temp.py  trade.py
crypto_pandas/binance/: authentication.py  binance_base_processor.py  binance_futures_client.py  binance_pandas.py  binance_requests.py  binance_spot_client.py  calculate_max_end_date.py  column_names.py  markets.py  options.py  options_client.py  orders.py  preprocessing.py  requests.py  trade.py
crypto_pandas/binance/cm_futures/: binance_cm_futures_processor.py
crypto_pandas/binance/futures/: futures_client.py
crypto_pandas/binance/options/: binance_options_processor.py  options_client.py
crypto_pandas/binance/um_futures/: binance_um_futures_processor.py
crypto_pandas/bybit/: authentication.py  bybit_base_processor.py  bybit_client.py  bybit_order_schema.py  bybit_pandas.py  bybit_requests.py  column_names.py  markets.py  preprocessing.py  trade.py
crypto_pandas/ccxt/: async_ccxt_pandas_exchange.py  async_ccxt_pandas_exchange_typed.py  base_processor.py  ccxt_base_processor.py  ccxt_order_schema.py  ccxt_pandas_async_wrapper.py  ccxt_pandas_exchange.py  ccxt_pandas_exchange_typed.py  ccxt_pandas_wrapper.py  ccxt_utils.py  markets.py  method_mappings.py  order_schema.py  orders.py  preprocessing.py  processor.py  trade.py
crypto_pandas/coinbase/: authenticate.py
crypto_pandas/crypto_com/: authentification.py
crypto_pandas/kraken/: authentitication.py
crypto_pandas/okx/: authentication.py
crypto_pandas/utils/: _generate_typed_interface.py  async_ccxt_pandas_exchange_typed.py  ccxt_pandas_exchange_typed.py  checks.py  date_range_wrapper.py  errors.py  pandas_trader_dataframe.py  pandas_trader_series.py  pandas_utils.py  requests.py  utils.py
crypto_pandas/utils/ccxt/: async_ccxt_pandas_exchange.py  async_ccxt_pandas_exchange_typed.py  base_processor.py  ccxt_pandas_exchange.py  ccxt_pandas_exchange_typed.py
docs/: requirements.txt
docs/source/: about.rst  conf.py  crypto_pandas.ccxt.async_ccxt_pandas_exchange.rst  crypto_pandas.ccxt.ccxt_pandas_exchange.rst  crypto_pandas.rst  examples.rst  index.rst  installation.rst  introduction.md  modules.rst
examples/: 01_simple_synchronous.ipynb  02_asynchronous.ipynb  02_load_1000_ohlcv_async.py  03_websockets.ipynb  03_websockets.py  04_load_symbols_all_exchanges_async.py
tests/: order_schema.py  test_async.py  test_async_ccxt_pandas_wrapper.py  test_binance_futures_client.py  test_binance_spot_client.py  test_bybit_client.py  test_ccxt_pandas_wrapper.py  test_sync.py  test_websockets.py
tests/binance/: test_options_data.py  test_options_orders.py
tests/bybit/: temp.py
(+5 files in other folders)
