[project]
name = "crypto-pandas"
version = "0.1.38"
description = "Library to to work with crypto exchanges using Pandas DataFrame."
authors = [
    {name = "Lucas Jamar", email = "lucas.jamar@carpentrix.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas[output-formatting, performance] (>=2.2.3,<3.0.0)",
    "ccxt (>=4.4.57,<5.0.0)",
    "grequests (>=0.7.0,<0.8.0)",
]

[project.urls]
homepage = "https://github.com/lucasjamar/crypto-pandas"
repository = "https://github.com/lucasjamar/crypto-pandas"
documentation = "https://github.com/lucasjamar/crypto-pandas"

[tool.poetry]
exclude = ["binder/*", "examples/*", "tests/*", ".env"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
