[project]
name = "crypto-pandas"
version = "0.4.5"
description = "Library combining the power of CCXT with Pandas."
authors = [
    {name = "Lucas Jamar", email = "lucas.jamar@sqphi.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas[computation, output-formatting, performance] (>=2.2.3,<3.0.0)",
    "ccxt (>=4.4.0,<5.0.0)",
    "pandera (>=0.22.1,<0.23.0)",
]

[project.urls]
homepage = "https://github.com/sigma-quantiphi/crypto-pandas"
repository = "https://github.com/sigma-quantiphi/crypto-pandas"
documentation = "https://github.com/sigma-quantiphi/crypto-pandas"

[tool.poetry]
include = ["crypto_pandas/*"]
exclude = ["binder/*", "examples/*", "tests/*", ".env"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
