[project]
name = "crypto-pandas"
version = "0.9.10"
description = "Library combining the power of CCXT with Pandas."
authors = [
    {name = "Sigma Quantiphi", email = "contact@sqphi.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-lru (>=2.0.0,<3.0.0)",
    "cachetools (>=6.0.0,<7.0.0)",
    "ccxt (>=4.4.0,<5.0.0)",
    "pandas[computation, output-formatting, performance] (>=2.2.3,<3.0.0)",
    "pandera (>=0.22.1,<0.23.0)",
    "orjson (>=3.0.0,<4.0.0)",
]

[project.urls]
homepage = "https://github.com/sigma-quantiphi/crypto-pandas"
repository = "https://github.com/sigma-quantiphi/crypto-pandas"
documentation = "https://github.com/sigma-quantiphi/crypto-pandas"

[tool.poetry]
include = ["crypto_pandas/*"]
exclude = ["binder/*", "dist/*", "docs/*", "examples/*", "tests/*", ".env"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
